<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_available"
        android:icon="@drawable/user_online"
        android:title="@string/menu_available"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_solo"
        android:icon="@drawable/user_solo"
        android:title="@string/menu_solo"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_busy"
        android:icon="@drawable/user_busy"
        android:title="@string/menu_busy"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_enable_auto_run"
        android:title="@string/menu_enable_auto_run"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_disable_auto_run"
        android:title="@string/menu_disable_auto_run"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_enable_auto_connect_channels"
        android:title="@string/menu_enable_auto_connect_channels"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_disable_auto_connect_channels"
        android:title="@string/menu_disable_auto_connect_channels"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_open_app"
        android:title="@string/menu_open_app"
        app:showAsAction="never" />
</menu>
